package edu.unlam.progava.cafe;

public class VasoDeCafe {

	private boolean lleno;

	public VasoDeCafe(boolean lleno) {
		this.lleno = lleno;
	}
	public boolean isLleno() {
		return lleno;
	}
}
